automate model retrain

--- a/.gitignore
+++ b/.gitignore
@@ -81,5 +81,5 @@ notes.txt
 !src/data/
 ANALYSIS_SUMMARY.md
 GITHUB_ACTIONS_TROUBLESHOOTING.md
-IMPLEMENTATION_SUMMARYsmd
-MODEL_TRAINING_GUIDEsmd
+IMPLEMENTATION_SUMMARYs.md
+MODEL_TRAINING_GUIDEs.md
