--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,12 +1,12 @@
 streamlit
-pandas
-numpy
-plotly
-pymongo
-dnspython
-python-dotenv
-requests
-scikit-learn
-xgboost
-lightgbm
-shap>=0.50.0
+# pandas
+# numpy
+# plotly
+# pymongo
+# dnspython
+# python-dotenv
+# requests
+# scikit-learn
+# xgboost
+# lightgbm
+# shap>=0.50.0
